dungeon_editor/parser/QrogueDungeonParser.py
# Generated from D:/Documents/pycharm_workspace/Qrogue/dungeon_editor\QrogueDungeon.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class QrogueDungeonParser ( Parser ):

    grammarFileName = "QrogueDungeon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'('", "')'", "'c'", "'t'", "'e'", 
                     "'r'", "'$'", "'_'", "'one way'", "'entangled'", "'['", 
                     "']'", "'custom'", "'default'", "'rewards'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'visible'", 
                     "'foggy'", "'open'", "'closed'", "'locked'", "'Spawn'", 
                     "'Wild'", "'Shop'", "'Riddle'", "'Boss'", "'Gate'", 
                     "'key'", "'coin'", "'health'", "'gate'", "'+'", "'-'", 
                     "'Qrogue<'", "'>Qrogue'", "'[Layout]'", "'[Custom Rooms]'", 
                     "'[Hallways]'", "'[StateVector Pools]'", "'[Reward Pools]'", 
                     "'~'", "'|'", "','", "'#'", "'..'", "'__'", "<INVALID>", 
                     "'ordered'", "'random'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DIGIT", "INTEGER", "FLOAT", "IMAG_NUMBER", 
                      "SIGN", "CHARACTER_LOW", "CHARACTER_UP", "CHARACTER", 
                      "VISIBLE_LITERAL", "FOGGY_LITERAL", "OPEN_LITERAL", 
                      "CLOSED_LITERAL", "LOCKED_LITERAL", "SPAWN_LITERAL", 
                      "WILD_LITERAL", "SHOP_LITERAL", "RIDDLE_LITERAL", 
                      "BOSS_LITERAL", "GATE_ROOM_LITERAL", "KEY_LITERAL", 
                      "COIN_LITERAL", "HEALTH_LITERAL", "GATE_LITERAL", 
                      "PLUS_SIGN", "MINUS_SIGN", "HEADER", "ENDER", "LAYOUT", 
                      "ROOMS", "HALLWAYS", "STV_POOLS", "REWARD_POOLS", 
                      "HORIZONTAL_SEPARATOR", "VERTICAL_SEPARATOR", "LIST_SEPARATOR", 
                      "WALL", "EMPTY_HALLWAY", "EMPTY_ROOM", "DIRECTION", 
                      "ORDERED_DRAW", "RANDOM_DRAW", "ROOM_ID", "HALLWAY_ID", 
                      "REFERENCE", "WS", "UNIVERSAL_SEPARATOR", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_start = 0
    RULE_integer = 1
    RULE_complex_number = 2
    RULE_layout = 3
    RULE_l_room_row = 4
    RULE_l_hallway_row = 5
    RULE_rooms = 6
    RULE_room = 7
    RULE_r_attributes = 8
    RULE_r_visibility = 9
    RULE_r_type = 10
    RULE_r_row = 11
    RULE_tile = 12
    RULE_tile_descriptor = 13
    RULE_enemy_descriptor = 14
    RULE_collectible_descriptor = 15
    RULE_trigger_descriptor = 16
    RULE_energy_descriptor = 17
    RULE_riddle_descriptor = 18
    RULE_shop_descriptor = 19
    RULE_hallways = 20
    RULE_hallway = 21
    RULE_h_attributes = 22
    RULE_draw_strategy = 23
    RULE_stv_pools = 24
    RULE_default_stv_pool = 25
    RULE_stv_pool = 26
    RULE_stvs = 27
    RULE_stv = 28
    RULE_reward_pools = 29
    RULE_default_reward_pool = 30
    RULE_reward_pool = 31
    RULE_collectibles = 32
    RULE_collectible = 33

    ruleNames =  [ "start", "integer", "complex_number", "layout", "l_room_row", 
                   "l_hallway_row", "rooms", "room", "r_attributes", "r_visibility", 
                   "r_type", "r_row", "tile", "tile_descriptor", "enemy_descriptor", 
                   "collectible_descriptor", "trigger_descriptor", "energy_descriptor", 
                   "riddle_descriptor", "shop_descriptor", "hallways", "hallway", 
                   "h_attributes", "draw_strategy", "stv_pools", "default_stv_pool", 
                   "stv_pool", "stvs", "stv", "reward_pools", "default_reward_pool", 
                   "reward_pool", "collectibles", "collectible" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    DIGIT=17
    INTEGER=18
    FLOAT=19
    IMAG_NUMBER=20
    SIGN=21
    CHARACTER_LOW=22
    CHARACTER_UP=23
    CHARACTER=24
    VISIBLE_LITERAL=25
    FOGGY_LITERAL=26
    OPEN_LITERAL=27
    CLOSED_LITERAL=28
    LOCKED_LITERAL=29
    SPAWN_LITERAL=30
    WILD_LITERAL=31
    SHOP_LITERAL=32
    RIDDLE_LITERAL=33
    BOSS_LITERAL=34
    GATE_ROOM_LITERAL=35
    KEY_LITERAL=36
    COIN_LITERAL=37
    HEALTH_LITERAL=38
    GATE_LITERAL=39
    PLUS_SIGN=40
    MINUS_SIGN=41
    HEADER=42
    ENDER=43
    LAYOUT=44
    ROOMS=45
    HALLWAYS=46
    STV_POOLS=47
    REWARD_POOLS=48
    HORIZONTAL_SEPARATOR=49
    VERTICAL_SEPARATOR=50
    LIST_SEPARATOR=51
    WALL=52
    EMPTY_HALLWAY=53
    EMPTY_ROOM=54
    DIRECTION=55
    ORDERED_DRAW=56
    RANDOM_DRAW=57
    ROOM_ID=58
    HALLWAY_ID=59
    REFERENCE=60
    WS=61
    UNIVERSAL_SEPARATOR=62
    COMMENT=63
    LINE_COMMENT=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADER(self):
            return self.getToken(QrogueDungeonParser.HEADER, 0)

        def layout(self):
            return self.getTypedRuleContext(QrogueDungeonParser.LayoutContext,0)


        def rooms(self):
            return self.getTypedRuleContext(QrogueDungeonParser.RoomsContext,0)


        def hallways(self):
            return self.getTypedRuleContext(QrogueDungeonParser.HallwaysContext,0)


        def stv_pools(self):
            return self.getTypedRuleContext(QrogueDungeonParser.Stv_poolsContext,0)


        def reward_pools(self):
            return self.getTypedRuleContext(QrogueDungeonParser.Reward_poolsContext,0)


        def ENDER(self):
            return self.getToken(QrogueDungeonParser.ENDER, 0)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = QrogueDungeonParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(QrogueDungeonParser.HEADER)
            self.state = 69
            self.layout()
            self.state = 70
            self.rooms()
            self.state = 71
            self.hallways()
            self.state = 72
            self.stv_pools()
            self.state = 73
            self.reward_pools()
            self.state = 74
            self.match(QrogueDungeonParser.ENDER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self):
            return self.getToken(QrogueDungeonParser.DIGIT, 0)

        def HALLWAY_ID(self):
            return self.getToken(QrogueDungeonParser.HALLWAY_ID, 0)

        def INTEGER(self):
            return self.getToken(QrogueDungeonParser.INTEGER, 0)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)




    def integer(self):

        localctx = QrogueDungeonParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QrogueDungeonParser.DIGIT) | (1 << QrogueDungeonParser.INTEGER) | (1 << QrogueDungeonParser.HALLWAY_ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Complex_numberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMAG_NUMBER(self):
            return self.getToken(QrogueDungeonParser.IMAG_NUMBER, 0)

        def SIGN(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.SIGN)
            else:
                return self.getToken(QrogueDungeonParser.SIGN, i)

        def integer(self):
            return self.getTypedRuleContext(QrogueDungeonParser.IntegerContext,0)


        def FLOAT(self):
            return self.getToken(QrogueDungeonParser.FLOAT, 0)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_complex_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplex_number" ):
                listener.enterComplex_number(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplex_number" ):
                listener.exitComplex_number(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComplex_number" ):
                return visitor.visitComplex_number(self)
            else:
                return visitor.visitChildren(self)




    def complex_number(self):

        localctx = QrogueDungeonParser.Complex_numberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_complex_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QrogueDungeonParser.SIGN:
                self.state = 78
                self.match(QrogueDungeonParser.SIGN)


            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QrogueDungeonParser.IMAG_NUMBER]:
                self.state = 81
                self.match(QrogueDungeonParser.IMAG_NUMBER)
                pass
            elif token in [QrogueDungeonParser.DIGIT, QrogueDungeonParser.INTEGER, QrogueDungeonParser.FLOAT, QrogueDungeonParser.HALLWAY_ID]:
                self.state = 84
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [QrogueDungeonParser.DIGIT, QrogueDungeonParser.INTEGER, QrogueDungeonParser.HALLWAY_ID]:
                    self.state = 82
                    self.integer()
                    pass
                elif token in [QrogueDungeonParser.FLOAT]:
                    self.state = 83
                    self.match(QrogueDungeonParser.FLOAT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QrogueDungeonParser.SIGN:
                    self.state = 86
                    self.match(QrogueDungeonParser.SIGN)
                    self.state = 87
                    self.match(QrogueDungeonParser.IMAG_NUMBER)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayoutContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LAYOUT(self):
            return self.getToken(QrogueDungeonParser.LAYOUT, 0)

        def l_room_row(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueDungeonParser.L_room_rowContext)
            else:
                return self.getTypedRuleContext(QrogueDungeonParser.L_room_rowContext,i)


        def HORIZONTAL_SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.HORIZONTAL_SEPARATOR)
            else:
                return self.getToken(QrogueDungeonParser.HORIZONTAL_SEPARATOR, i)

        def l_hallway_row(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueDungeonParser.L_hallway_rowContext)
            else:
                return self.getTypedRuleContext(QrogueDungeonParser.L_hallway_rowContext,i)


        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_layout

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayout" ):
                listener.enterLayout(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayout" ):
                listener.exitLayout(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayout" ):
                return visitor.visitLayout(self)
            else:
                return visitor.visitChildren(self)




    def layout(self):

        localctx = QrogueDungeonParser.LayoutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_layout)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(QrogueDungeonParser.LAYOUT)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.HORIZONTAL_SEPARATOR:
                self.state = 93
                self.match(QrogueDungeonParser.HORIZONTAL_SEPARATOR)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.l_room_row()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.VERTICAL_SEPARATOR:
                self.state = 100
                self.l_hallway_row()
                self.state = 101
                self.l_room_row()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.HORIZONTAL_SEPARATOR:
                self.state = 108
                self.match(QrogueDungeonParser.HORIZONTAL_SEPARATOR)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L_room_rowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERTICAL_SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.VERTICAL_SEPARATOR)
            else:
                return self.getToken(QrogueDungeonParser.VERTICAL_SEPARATOR, i)

        def ROOM_ID(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.ROOM_ID)
            else:
                return self.getToken(QrogueDungeonParser.ROOM_ID, i)

        def EMPTY_ROOM(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.EMPTY_ROOM)
            else:
                return self.getToken(QrogueDungeonParser.EMPTY_ROOM, i)

        def HALLWAY_ID(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.HALLWAY_ID)
            else:
                return self.getToken(QrogueDungeonParser.HALLWAY_ID, i)

        def EMPTY_HALLWAY(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.EMPTY_HALLWAY)
            else:
                return self.getToken(QrogueDungeonParser.EMPTY_HALLWAY, i)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_l_room_row

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_room_row" ):
                listener.enterL_room_row(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_room_row" ):
                listener.exitL_room_row(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitL_room_row" ):
                return visitor.visitL_room_row(self)
            else:
                return visitor.visitChildren(self)




    def l_room_row(self):

        localctx = QrogueDungeonParser.L_room_rowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_l_room_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(QrogueDungeonParser.VERTICAL_SEPARATOR)
            self.state = 115
            _la = self._input.LA(1)
            if not(_la==QrogueDungeonParser.EMPTY_ROOM or _la==QrogueDungeonParser.ROOM_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.EMPTY_HALLWAY or _la==QrogueDungeonParser.HALLWAY_ID:
                self.state = 116
                _la = self._input.LA(1)
                if not(_la==QrogueDungeonParser.EMPTY_HALLWAY or _la==QrogueDungeonParser.HALLWAY_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 117
                _la = self._input.LA(1)
                if not(_la==QrogueDungeonParser.EMPTY_ROOM or _la==QrogueDungeonParser.ROOM_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(QrogueDungeonParser.VERTICAL_SEPARATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L_hallway_rowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERTICAL_SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.VERTICAL_SEPARATOR)
            else:
                return self.getToken(QrogueDungeonParser.VERTICAL_SEPARATOR, i)

        def HALLWAY_ID(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.HALLWAY_ID)
            else:
                return self.getToken(QrogueDungeonParser.HALLWAY_ID, i)

        def EMPTY_HALLWAY(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.EMPTY_HALLWAY)
            else:
                return self.getToken(QrogueDungeonParser.EMPTY_HALLWAY, i)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_l_hallway_row

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_hallway_row" ):
                listener.enterL_hallway_row(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_hallway_row" ):
                listener.exitL_hallway_row(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitL_hallway_row" ):
                return visitor.visitL_hallway_row(self)
            else:
                return visitor.visitChildren(self)




    def l_hallway_row(self):

        localctx = QrogueDungeonParser.L_hallway_rowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_l_hallway_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(QrogueDungeonParser.VERTICAL_SEPARATOR)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                _la = self._input.LA(1)
                if not(_la==QrogueDungeonParser.EMPTY_HALLWAY or _la==QrogueDungeonParser.HALLWAY_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==QrogueDungeonParser.EMPTY_HALLWAY or _la==QrogueDungeonParser.HALLWAY_ID):
                    break

            self.state = 131
            self.match(QrogueDungeonParser.VERTICAL_SEPARATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoomsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROOMS(self):
            return self.getToken(QrogueDungeonParser.ROOMS, 0)

        def room(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueDungeonParser.RoomContext)
            else:
                return self.getTypedRuleContext(QrogueDungeonParser.RoomContext,i)


        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_rooms

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRooms" ):
                listener.enterRooms(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRooms" ):
                listener.exitRooms(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRooms" ):
                return visitor.visitRooms(self)
            else:
                return visitor.visitChildren(self)




    def rooms(self):

        localctx = QrogueDungeonParser.RoomsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_rooms)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(QrogueDungeonParser.ROOMS)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.ROOM_ID:
                self.state = 134
                self.room()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROOM_ID(self):
            return self.getToken(QrogueDungeonParser.ROOM_ID, 0)

        def r_attributes(self):
            return self.getTypedRuleContext(QrogueDungeonParser.R_attributesContext,0)


        def WALL(self, i:int=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.WALL)
            else:
                return self.getToken(QrogueDungeonParser.WALL, i)

        def r_row(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueDungeonParser.R_rowContext)
            else:
                return self.getTypedRuleContext(QrogueDungeonParser.R_rowContext,i)


        def tile_descriptor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueDungeonParser.Tile_descriptorContext)
            else:
                return self.getTypedRuleContext(QrogueDungeonParser.Tile_descriptorContext,i)


        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_room

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoom" ):
                listener.enterRoom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoom" ):
                listener.exitRoom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoom" ):
                return visitor.visitRoom(self)
            else:
                return visitor.visitChildren(self)




    def room(self):
